Upload Dungeon class, Room class, minimap and monster database on GitHub