@@ -1,14 +1,10 @@
 package Model;
 
-import java.util.ArrayList;
-
-import java.util.Collections;
-import java.util.List;
-
+import java.util.*;
 
 public class Dungeon {
     private final Room[][] maze;
-    private final int SIZE = 4;
+    private final int SIZE = 8;
     private int myNumberOfEntrances;
     private int myNumberOfExits;
     private int myNumberOfPillars;
@@ -21,35 +17,30 @@ public class Dungeon {
     private void generateMaze() {
         boolean validMaze = false;
         while (!validMaze) {
-          List<Character> pillars = new ArrayList<>();
-          pillars.add('A');
-          pillars.add('P');
-          pillars.add('E');
-          pillars.add('I');
+            Set<Character> placedPillars = new HashSet<>(); // Initialize placedPillars set
             // Initialize maze with empty rooms
             for (int i = 0; i < SIZE; i++) {
                 for (int j = 0; j < SIZE; j++) {
                     maze[i][j] = new Room();
                     maze[i][j].setMyX(i);
                     maze[i][j].setMyY(j);
-                    if(maze[i][j].getMyHasPillar()){
-                        setUpPillars(maze[i][j],pillars);
+                    if (!maze[i][j].getMyEntrance() && !maze[i][j].getMyExit()) {
+                        setUpPillars(maze[i][j], placedPillars);
                     }
                 }
             }
 
             // Place entrance and exit
             maze[0][0].setMyEntrance(true);
+            maze[0][0].setMyItem('i'); // Set entrance
             maze[SIZE - 1][SIZE - 1].setMyExit(true);
-
-
-
-
+            maze[SIZE - 1][SIZE - 1].setMyItem('o'); // Set exit
 
             // Check if the maze is traversable
             if (isTraversable()) {
                 validMaze = true;
-            } else{
+            } else {
+                // Reset counts if the maze is not valid
                 myNumberOfEntrances = 0;
                 myNumberOfExits = 0;
                 myNumberOfPillars = 0;
@@ -57,12 +48,29 @@ public class Dungeon {
         }
     }
 
-    private void setUpPillars(Room theRoom, List<Character> thePillars) {
-        Collections.shuffle(thePillars); // Shuffle the pillars to randomize placement
-        if(!thePillars.isEmpty()){
-            theRoom.setMyItem(thePillars.getFirst());
-            thePillars.removeFirst();
+    private void setUpPillars(Room theRoom, Set<Character> placedPillars) {
+            // Check if the room is empty and no pillar is placed yet
+            if (theRoom.getMyItem() == ' ' && myNumberOfPillars == 0) {
+                // Check if the room is not too close to the entrance or exit
+                if (!isTooCloseToEntranceOrExit(theRoom)) {
+                    // Select a random pillar from the set of options
+                    List<Character> pillarOptions = Arrays.asList('A', 'P', 'I', 'E');
+                    Collections.shuffle(pillarOptions);
+                    char pillar = pillarOptions.get(0); // Randomly select a pillar
+                    // Place the pillar in the room
+                    theRoom.setMyItem(pillar);
+                    placedPillars.add(pillar);
+                    myNumberOfPillars++;
+                }
         }
+    }
+
+    private boolean isTooCloseToEntranceOrExit(Room room) {
+        int x = room.getMyX();
+        int y = room.getMyY();
+        int distanceFromEntrance = Math.abs(x) + Math.abs(y); // Manhattan distance from entrance
+        int distanceFromExit = Math.abs(SIZE - 1 - x) + Math.abs(SIZE - 1 - y); // Manhattan distance from exit
+        return distanceFromEntrance < 3 || distanceFromExit < 3;
     }
 
     private boolean dfs(int x, int y, boolean[][] visited) {
@@ -90,7 +98,7 @@ public class Dungeon {
 
     private boolean isTraversable() {
         boolean[][] visited = new boolean[SIZE][SIZE];
-        return dfs(0, 0, visited) && myNumberOfPillars==4;
+        return dfs(0, 0, visited) && myNumberOfPillars==1;
     }
 
 
